--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        asdasdasd
-    </p>
+    <input class="price" type="text">
+    <button>click</button>
+    <script>
+    document.querySelector("button").addEventListener("click",()=>{
+        console.log(document.querySelector("input").getAttribute("class"))
+    })
+    </script>
 </body>
 </html>
