--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <input class="price" type="text">
     <button>click</button>
     <script>
-    document.querySelector("button").addEventListener("click",()=>{
-        console.log(document.querySelector("input").getAttribute("class"))
-    })
+        const str = "localhost:3001\\\\"
+        console.log(str.replace("\\\\","/"))
     </script>
 </body>
+
 </html>
